# dma-tools-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
OpenOCD/DNA/: init_232_100t.cfg  init_232_35t.cfg  init_232_75t.cfg  init_347.cfg
OpenOCD/cpld/: jtagspi-347.cfg
OpenOCD/flash/: xc7a100T.cfg  xc7a100T_rs232.cfg  xc7a35T.cfg  xc7a35T_rs232.cfg  xc7a75T.cfg  xc7a75T_rs232.cfg
src/: app.rs  main.rs
src/assets/: mod.rs
src/branding/: branding.7z
src/device_programmer/: dna.rs  firmware.rs  mod.rs  monitor.rs  process.rs  types.rs
src/ui/: mod.rs
src/ui/drivers/: mod.rs
src/ui/file_select/: check.rs  components.rs  firmware.rs  mod.rs
src/ui/log_view/: components.rs  mod.rs  render.rs  styles.rs
src/ui/operation/: buttons.rs  components.rs  mod.rs  types.rs
src/ui/options/: buttons.rs  mod.rs  panels.rs  render.rs
src/ui/pcileech_test/: mod.rs  types.rs
src/ui/status/: mod.rs  progress.rs  result.rs  types.rs
src/utils/: cleanup.rs  contact.rs  file_checker.rs  firmware_discovery.rs  logger.rs  mod.rs  win_utils.rs  window.rs
src/utils/localization/: arabic.rs  chinese.rs  english.rs  german.rs  mod.rs  portuguese.rs  reshaper.rs
temp/: 100t.cfg  100t_flash.bat  75t.cfg  75t_flash.bat  xilinx-xc7.cfg
tools/FTDIBUS3/: FTDIBUS3.cat  FTDIBUS3.sys  ftdibus3.Inf  ftdibus3.PNF
workflows/: release.yml
